--- a/assets/styles/landing_section.scss
+++ b/assets/styles/landing_section.scss
@@ -11,42 +11,92 @@ header {
     margin-right: 1.5rem;
     margin-top: 1rem;
 
+
     .logo {
         max-width: 3em;
         max-height: 3em;
         cursor: pointer;
     }
 
-    .fries_menu {
-        cursor: pointer;
+    .wrapper {
+        position: relative;
+
+        .fries_menu {
+            cursor: pointer;
+        }
+
+
+
+        .blob-right-corner {
+            position: absolute;
+            top: -155px;
+            left: -140px;
+            max-width: 20em;
+
+            z-index: -1;
+        }
+
+        .blob-stroke {
+            position: absolute;
+            max-width: 17em;
+            left: -150px;
+            top: -30px;
+
+            z-index: -1;
+        }
+
+        .blue_cross {
+            position: absolute;
+            left: -140px;
+            max-width: 1em;
+        }
+
+        .blob-right-corner-shadow {
+            position: absolute;
+            top: -165px;
+            left: -170px;
+            max-width: 22em;
+
+            z-index: -2;
+        }
+    }
+}
+
+.hero_text-headline {
+    position: relative;
+    margin-top: 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    text-align: center;
+
+    padding: 2rem;
+
+    h2{
+        margin-bottom: 1rem;
     }
 
-
-
-    .blob-right-corner {
-        position: absolute;
-        top: -150px;
-        left: 60%;
-        max-width: 20em;
-
-        z-index: -1;
+    span {
+        color: $cta-color;
     }
+}
 
-    .blob-stroke{
-        position: absolute;
-        max-width: 5em;
+.hero_cta-button {
+    padding: 2rem;
+    display: flex;
+    justify-content: center;
 
-        z-index: -1;
+    .cta-button {
+        padding: 1.2rem;
+        background-color: $cta-color;
+        color: $bg-color;
+        border-radius: 2.5rem;
+
+        box-shadow: 0 2px 10px #001D57, 0 1px 5px #2F1484;
+
+        font-weight: bold;
+        text-decoration: none;
     }
-
-    .blob-right-corner-shadow {
-        position: absolute;
-        top: -158px;
-        left: 52%;
-        max-width: 22em;
-
-        z-index: -2;
-    }
-
-
 }
