--- a/assets/styles/about-me_section.scss
+++ b/assets/styles/about-me_section.scss
@@ -1,5 +1,25 @@
 // ABOUT ME SECTION STYLES
 
+.about_blobs {
+    position: relative;
+
+    #blob-left-corner {
+        position: absolute;
+        max-width: 20em;
+
+        left: -170px;
+    }
+
+    #blob-left-corner-shadow {
+        position: absolute;
+        max-width: 20em;
+        z-index: -1;
+
+        left: -165px;
+        top: 15px;
+    }
+}
+
 .about_section {
     display: flex;
     flex-direction: column;
@@ -7,12 +27,13 @@
     justify-content: center;
 
     position: relative;
+    top: 150px;
     padding: 2rem;
 
     .about_profile-picture {
         width: 15em;
-        box-shadow: 5px 5px 0px $secondary-color, -5px -5px 0px $secondary-color;
-
+        //box-shadow: 5px 5px 0px $secondary-color, -5px -5px 0px $secondary-color;
+        border: 3px solid $secondary-color;
         margin-bottom: 2rem;
     }
 
@@ -21,8 +42,6 @@
             color: $cta-color;
         }
 
-        .about_text-description{
-            //width: 35ch;
-        }
+
     }
 }
