--- a/assets/styles/about-me_section.scss
+++ b/assets/styles/about-me_section.scss
@@ -12,6 +12,8 @@
         
     }
 
+
+
     #blob-left-corner-shadow {
         position: absolute;
         width: 70%;
@@ -22,27 +24,53 @@
 }
 
 .about_section {
+    width: 90%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 
     position: relative;
+    margin: 0 auto;
 
     // el error
     //top: 150px;
     padding: 2rem;
 
+    @media (min-width: 490px){
+        flex-direction: row;
+        justify-content: space-between;
+    }
+    
+    .about_profile-picture-wrapper{
+        position: relative;
+        .about_profile-picture {
+            width: 15em;
+            //box-shadow: 5px 5px 0px $secondary-color, -5px -5px 0px $secondary-color;
+            border: 3px solid $secondary-color;
+            margin-bottom: 2rem;
+        }
+
+        #horizontal-dots{
+            position: absolute;
+            width: 20%;
+            left: 90%;
+            top: -7%;
+        }
+        @media(min-width: 490px){
+            order: 2;
+        }
+    }
     
 
-    .about_profile-picture {
-        width: 15em;
-        //box-shadow: 5px 5px 0px $secondary-color, -5px -5px 0px $secondary-color;
-        border: 3px solid $secondary-color;
-        margin-bottom: 2rem;
-    }
-
     .about_text {
+
+        @media(min-width: 490px){
+            p{
+                line-height: 1.75rem;
+                max-width: 40ch;
+            }
+        }
         padding: 1rem;
         span {
             color: $cta-color;
