--- a/assets/styles/social-media_section.scss
+++ b/assets/styles/social-media_section.scss
@@ -26,14 +26,19 @@
         }
 
         .twitter-spot_info{
+            position: relative;
             background-color: $bg-color;
             border: 2px solid $secondary-color;
             padding: 2rem;
             margin-bottom: 2rem;
             max-width: 90%;
 
+            
+
             #twitter-banner{
+                position: relative;
                 width: 90%;
+                margin: 0 auto;
             }
 
             .twitter-spot_feed{
@@ -45,10 +50,18 @@
                 }
             }
             .twitter-spot_cta{
-                width: 35%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                position: absolute;
+                left: 85%;
+                width: 75px;
+                height: 75px;
                 border-radius: 50%;
                 border: 2px solid $secondary-color;
                 background-color: $bg-color;
+
+               cursor: pointer;
 
                 #twitter-logo{
                     width: 50%;
