--- a/assets/styles/portfolio_section.scss
+++ b/assets/styles/portfolio_section.scss
@@ -1,1 +1,31 @@
 // PORTFOLIO SECTION
+
+
+.portfolio_section{
+    background-color: $bg-color;
+    padding: 2rem;
+    width: 90%;
+    h2{
+        margin-bottom: 3rem;
+    }
+
+    .portfolio_section-latest-work{
+        position: relative;
+        width: 90%;
+        .latest-work_layout{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: space-between;
+
+            @media(min-width: 490px){
+                flex-direction: row;
+                align-content: flex-start;
+            }
+        }
+        h3{
+            color: $secondary-light;
+            margin-bottom: 3rem;
+        }
+    }
+}
