--- a/assets/styles/services_section.scss
+++ b/assets/styles/services_section.scss
@@ -10,5 +10,11 @@
         flex-direction: column;
         align-items: center;
         justify-content: space-between;
+
+        padding: 2rem;
+        @media (min-width: 490px){
+            flex-direction: row;
+            
+    }
     }
 }
