--- a/assets/styles/hero_section.scss
+++ b/assets/styles/hero_section.scss
@@ -5,8 +5,6 @@ header {
     position: relative;
     width: auto;
 
-    
-
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -24,8 +22,39 @@ header {
     }
 
     .header_hamburger-menu {
-            cursor: pointer;
+        cursor: pointer;
+        @media (min-width: 490px){
+            display: none;
         }
+    }
+
+    .hero_contact-button{
+        @media (max-width: 490px){
+            display: none;
+            
+        }
+    }
+
+    .hero_nav-links{
+        
+
+        @media (max-width: 490px){
+            display: none;
+            
+        }
+
+        li{
+            list-style: none;
+            display: inline;
+            margin-left: 2.5rem;
+
+            a{
+                text-decoration: none;
+                color: #e5e5e5;
+                font-weight: bold;
+            }
+        }
+    }
 
 
 
