contact form styled

--- a/assets/styles/hero_section.scss
+++ b/assets/styles/hero_section.scss
@@ -1,5 +1,9 @@
 // HERO SECTION STYLES
 
+// @font-face {
+//     font-family: airone;
+//     src: url(~/fonts/airone/Airone-Demo.otf);
+// }
 
 header {
     position: relative;
