--- a/assets/styles/contact_section.scss
+++ b/assets/styles/contact_section.scss
@@ -2,19 +2,63 @@
 
 .contact_section{
     padding: 2rem;
-
+    margin-top: 2rem;
     h2{
         text-align: center;
     }
 
-    form{
-        margin-top: 2rem;
+    .contact_form{
 
-        #input-email{
-            width: 50%;
-            background-color: #020B1D;
-            border-radius: 10px;
-            border: 2px solid #180D4D;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        form{
+            margin-top: 2rem;
+            width: 90%;
+            .contact-form_control{
+                margin-bottom: 1.5rem;
+                position: relative;
+            }
+            input, textarea{
+                width: 100%;
+                padding: .6rem;
+                background-color: #020B1D;
+                border-radius: 1rem;
+                border: 2px solid #180D4D;
+
+                // &:focus~label{
+                //     top: -30px;
+                //     font-size: .5rem;
+                // }
+            }
+
+            label{
+                position: absolute;
+                left: 5%;
+                top: 0;
+                opacity: .3;
+                padding: .5rem;
+                cursor: text;
+                transition: .2s all ease-in-out;
+            }
+
+            button{
+                width: 100%;
+                padding: 1rem;
+                background-color: $cta-color;
+                color: $bg-color;
+                border-radius: 2rem;
+
+                box-shadow: 0 2px 10px #001D57, 0 1px 5px #2F1484;
+
+                font-weight: bold;
+                font-size: 1.2rem;
+            }
         }
-    }
+
+        input:focus~label{
+            top: -30px;
+            font-size: .5rem;
+        }
+    }     
 }
