--- a/assets/styles/contact_section.scss
+++ b/assets/styles/contact_section.scss
@@ -57,6 +57,7 @@
                 background-color: $cta-color;
                 color: $bg-color;
                 border-radius: 2rem;
+                border: none;
 
                 box-shadow: 0 2px 10px #001D57, 0 1px 5px #2F1484;
 
