--- a/assets/styles/contact_section.scss
+++ b/assets/styles/contact_section.scss
@@ -19,6 +19,20 @@
                 margin-bottom: 1.8rem;
                 position: relative;
             }
+            .form_submit{
+                width: 100%;
+                max-width: 700px;
+                padding: 1rem;
+                background-color: $cta-color;
+                color: $bg-color;
+                border-radius: 2rem;
+                border: none;
+
+                box-shadow: 0 2px 10px #001D57, 0 1px 5px #2F1484;
+
+                font-weight: bold;
+                font-size: 1.2rem;
+            }
             input, textarea{
                 width: 100%;
                 max-width: 700px;
@@ -50,20 +64,6 @@
                 transition: .2s all ease-in-out;
             }
 
-            button{
-                width: 100%;
-                max-width: 700px;
-                padding: 1rem;
-                background-color: $cta-color;
-                color: $bg-color;
-                border-radius: 2rem;
-                border: none;
-
-                box-shadow: 0 2px 10px #001D57, 0 1px 5px #2F1484;
-
-                font-weight: bold;
-                font-size: 1.2rem;
-            }
         }
     }     
 }
