--- a/assets/styles/features/hamburgerMenu-overlay.scss
+++ b/assets/styles/features/hamburgerMenu-overlay.scss
@@ -2,7 +2,7 @@
 
 
 .menu_container {
-    position: relative;
+    // position: relative;
 
     .menu_toggle{
         position: relative;
@@ -39,36 +39,37 @@
 
 
     .menu_options{
-        display: none;
-        position: relative;
-        width: 0;
+        position: absolute;
+        left: 5%;
+        // transform: translate(-50%,-50%);
+        width: 100%;
         height: 100vh;
         background-color: $primary-color;
         overflow: hidden;
+        z-index: 1;
+
+        display: none;
         ul{
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%,-50%);
             display: flex;
             flex-wrap: wrap;
             flex-direction: column;
             justify-content: center;
             align-items: center;
+            z-index: 2;
             li{
                 list-style: none;
                 margin: 1rem 0;
-                color: $cta-color;
+                color: white;
                 font-size: 3rem;
                 font-weight: bold;
                 letter-spacing: 3px;
-                opacity: 0;
+                opacity: 1;
                 transition: .3s ease-in-out;
                 a{
                     text-decoration: none;
                     text-transform: uppercase;
                     padding: 10px 5px;
-                    color: $cta-color;
+                    color: white;
                     font-weight: 800;
                 }
             }
