--- a/assets/_variables.scss
+++ b/assets/_variables.scss
@@ -11,6 +11,11 @@ $tertiary-color: #01BCC9;
 
 // font metrics
 $text-color: #e5e5e5;
+$font-sizes: (
+    "regular": 1em,
+    "medium": 1.5em,
+    "large": 2em
+);
 
 
 
