--- a/assets/styles/sections/hero_section.scss
+++ b/assets/styles/sections/hero_section.scss
@@ -1,4 +1,5 @@
 // HERO SECTION STYLES
+@import 'assets/mixins';
 
 // @font-face {
 //     font-family: airone;
@@ -48,9 +49,26 @@ header {
             display: inline;
             margin-left: 2.5rem;
             a{
+                position: relative;
                 text-decoration: none;
                 color: #e5e5e5;
                 font-weight: bold;
+                @include transitionCubic;
+                &::after{
+                    content: '';
+                    position: absolute;
+                    top: 100%;
+                    left: 0%;
+                    width: 0px;
+                    height: 2.5px;
+                    
+                    @include transitionCubic;
+                }
+                &:hover::after{
+                    background-color: $cta-color;
+                    width: 60px;
+                    border-radius: 5px;
+                }
             }
         }
     }
