--- a/assets/styles/sections/hero_section.scss
+++ b/assets/styles/sections/hero_section.scss
@@ -123,14 +123,8 @@ header {
     // top: 2em;
     width: 90%;
     margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
-    text-align: center;
-
-    padding: 2rem;
+    @include flexCenter(column);
+    padding: 3rem;
 
     h2{
         margin-bottom: 2rem;
