--- a/assets/_mixins.scss
+++ b/assets/_mixins.scss
@@ -2,6 +2,23 @@
     transition: .5s all cubic-bezier(0.65,0.05,0.36,1);
 }
 
+@mixin transitionBack {
+    transition: .5s all cubic-bezier(0.68,-0.55,0.27,1.55);
+}
+
+@mixin transitionBackIn {
+    transition: .5s all cubic-bezier(0.6,-0.28,0.74,0.05);
+}
+
+@mixin transitionQuint {
+    transition: .5s all cubic-bezier(0.86,0,0.07,1);
+}
+
+@mixin transitionQuint {
+    transition: .5s all cubic-bezier(0.79,0.14,0.15,0.86);
+}
+
+
 @mixin flexCenter($direction) {
     display: flex;
     justify-content: center;
