--- a/assets/styles/sections/social-media_section.scss
+++ b/assets/styles/sections/social-media_section.scss
@@ -1,8 +1,10 @@
+@import 'assets/mixins';
+
 .social__section{
     width: 100%;
     position: relative;
     background-color: $bg-light;
-
+    @include flexCenter(column);
 
     .social__section_divider-top {
         position: relative;
@@ -46,7 +48,9 @@
     }
 
     .social__twitter{
+        position: relative;
         padding: 2rem;
+         @include flexCenter(column);
 
         h2{
             margin-bottom: 1.5rem;
@@ -61,34 +65,32 @@
             position: relative;
             background-color: $bg-color;
             border: 2px solid $secondary-color;
-            padding: 2rem;
+            padding: 1.5rem;
             margin-bottom: 2rem;
             max-width: 90%;
-
-            
+            @include flexCenter(column);
 
             #twitter-banner{
                 position: relative;
-                width: 90%;
-                margin: 0 auto;
+                width: 95%;
             }
 
             .twitter__feed{
                 padding: 1rem;
                 font-size: .75em;
+                align-self: baseline;
                 li{
                     color: $secondary-color;
                     margin-bottom: .5rem;
                 }
             }
             .twitter__btn{
-                display: flex;
-                justify-content: center;
-                align-items: center;
+                @include flexCenter(row);
                 position: absolute;
-                left: 85%;
-                width: 75px;
-                height: 75px;
+                left: 92%;
+                top: 88%;
+                width: 95px;
+                height: 95px;
                 border-radius: 50%;
                 border: 2px solid $secondary-color;
                 background-color: $bg-color;
@@ -97,6 +99,31 @@
 
                 #twitter-logo{
                     width: 50%;
+                }
+            }
+        }
+    }
+
+    .social__others{
+        @include flexCenter(column);
+        margin-bottom: 1rem;
+        h3{
+            margin-bottom: 1rem;
+        }
+        div{
+            @include flexCenter(row);
+            a{
+                @include flexCenter(row);
+                margin-left: 2rem;
+                padding: .5rem;
+                border-radius: 50px;
+                background-color: $bg-color;
+                color: $text-color;
+
+                text-decoration: none;
+
+                img{
+                    margin-left: .5rem;
                 }
             }
         }
