--- a/assets/_mixins.scss
+++ b/assets/_mixins.scss
@@ -25,3 +25,10 @@
     align-items: center;
     flex-direction: $direction;
 }
+
+@mixin flexJustify($direction, $justify) {
+    display: flex;
+    justify-content: $justify;
+    align-items: center;
+    flex-direction: $direction;
+}
