--- a/assets/styles/sections/services_section.scss
+++ b/assets/styles/sections/services_section.scss
@@ -1,15 +1,16 @@
 // SERVICES SECTION
 
-.services_section{
+.services__section{
     h2{
         text-align: center;
         margin-bottom: 2rem;
     }
-    .services_card-container{
+    .services__card-container{
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: space-between;
+        position: relative;
 
         padding: 2rem;
         @media (min-width: 490px){
