--- a/assets/styles/sections/services_section.scss
+++ b/assets/styles/sections/services_section.scss
@@ -10,6 +10,7 @@
         flex-direction: column;
         align-items: center;
         justify-content: space-between;
+        flex-wrap: wrap;
         position: relative;
 
         padding: 2rem;
