--- a/assets/styles/sections/footer.scss
+++ b/assets/styles/sections/footer.scss
@@ -8,20 +8,26 @@ footer {
   width: 100%;
   height: 200px;
 
+  display: flex;
+  @include flexCenter(column);
+
   .footer__content{
     position: relative;
+    margin: 2rem 2rem;
 
     .footer__content_logo{
         position: relative;
+        margin-bottom: 1rem;
+        @include flexCenter(column);
         .logo{
             max-width: 3em;
         }
     }
     .footer__content_nav-links{
         .nav-links {
-            // @media (max-width: 490px) {
-            //     display: none;
-            // }
+            @media (max-width: 490px) {
+                display: none;
+            }
 
             li {
                 list-style: none;
@@ -54,6 +60,29 @@ footer {
                 }
             }
         }
+    }
+    .footer__content_social-links{
+        position: relative;
+        a{
+            margin-left: 1.5rem;
+            img{
+                @include transitionBack;
+
+                &:hover{
+                    transform: translateY(-5px);
+                    filter: drop-shadow(0 3px 5px $primary-color);
+                }
+            }
+        }
+    }
+  }
+  .footer__author{
+    position: relative;
+    p{
+        font-family: 'Univa Nova', normal;
+        font-weight: 600;
+
+        font-size: 0.7rem;
     }
   }
 }
