--- a/assets/styles/sections/footer.scss
+++ b/assets/styles/sections/footer.scss
@@ -11,6 +11,7 @@ footer {
   display: flex;
   @include flexCenter(column);
 
+
   .footer__content{
     position: relative;
     margin: 2rem 2rem;
@@ -25,7 +26,7 @@ footer {
     }
     .footer__content_nav-links{
         .nav-links {
-            @media (max-width: 490px) {
+            @media (max-width: 650px) {
                 display: none;
             }
 
@@ -83,6 +84,24 @@ footer {
         font-weight: 600;
 
         font-size: 0.7rem;
+    }
+  }
+
+  @media (min-width: 650px) {
+    @include flexCenter(column);
+
+    .footer__content{
+        width: 90%;
+        @include flexCenter(row);
+        justify-content: space-between;
+        .footer__content_logo{
+            margin: 0;
+        }
+        .footer__content_social-links{
+            a{
+                margin-left: 0.5rem;
+            }
+        }
     }
   }
 }
