--- a/assets/styles/sections/contact_section.scss
+++ b/assets/styles/sections/contact_section.scss
@@ -76,6 +76,7 @@
             justify-content: center;
             width: 50%;
             max-width: 500px;
+            min-width: 230px;
             margin: 0 auto;
             padding: .6rem;
             background-color: #020B1D;
