--- a/assets/styles/sections/hero_section.scss
+++ b/assets/styles/sections/hero_section.scss
@@ -130,7 +130,7 @@ header {
     h2 {
         margin-bottom: 2rem;
         // font-family: 'Bungee', cursive;
-        font-family: 'Univa Nova', normal;
+        font-family: 'aironedemo', normal;
         font-size: 2rem;
     }
 
