--- a/assets/styles/sections/portfolio_section.scss
+++ b/assets/styles/sections/portfolio_section.scss
@@ -13,6 +13,7 @@
         left: 1%;
         opacity: .1;
         color: $secondary-color;
+        font-family: 'aironedemo', normal;
         font-size: 12em;
     }
 
@@ -30,6 +31,7 @@
         h3{
             color: $secondary-light;
             margin-bottom: 3rem;
+            font-family: 'aironedemo', normal;
         }
     }
     .portfolio__cta-button{
