--- a/assets/styles/sections/services_section.scss
+++ b/assets/styles/sections/services_section.scss
@@ -4,6 +4,7 @@
     h2{
         text-align: center;
         margin-bottom: 2rem;
+        font-family: 'aironedemo', normal;
     }
     .services__card-container{
         display: flex;
