--- a/assets/styles/sections/social-media_section.scss
+++ b/assets/styles/sections/social-media_section.scss
@@ -55,6 +55,7 @@
         h2{
             margin-bottom: 1.5rem;
             text-align: center;
+            font-family: 'aironedemo', normal;
         }
 
         p{
