--- a/assets/styles/sections/contact_section.scss
+++ b/assets/styles/sections/contact_section.scss
@@ -7,6 +7,7 @@
     
     h2{
         text-align: center;
+        font-family: 'aironedemo', normal;
     }
     .contact__form{
         position: relative;
