testing og:image

--- a/assets/_variables.scss
+++ b/assets/_variables.scss
@@ -10,7 +10,7 @@ $tertiary-color: #01BCC9;
 
 
 // font metrics
-$text-color: #e5e5e5;
+$text-color: #c4e6fa;
 $font-sizes: (
     "regular": 1em,
     "medium": 1.5em,
